index.css
   body {
    margin: 0;
    padding: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif,'Elite';
    line-height: 1.5;
    overflow: hidden;
    color: #222222;
}

h1,h2,h3,p,label { font-family: 'elite'}

.center {text-align:center}

.szj {max-width:300px;border-radius:200px;}

.szj2 {max-width:100px;border-radius:200px;}

.greyscale {filter: grayscale(100%);}

.max-w-50 {max-width:50px;}

@font-face {
    font-family: 'elite';
    src: url('fonts/SpecialElite-Regular.ttf');
}

button, input {
    outline: none;
}

button:disabled {
    opacity: 0.6;
    cursor: initial !important;
}

a {
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

pre[class*="language-"] {
    overflow: hidden;
}

code[class*="language-"] {
    font-size: .9em;
}

.nd-noode-inspect pre[class*="language-"] {
    overflow: auto;
}

.logo {
    height: 150px;
    display: block;
    margin: auto;
}

.title {
    font-size: 2.5em;
    font-weight: lighter;
    color: #509923;
    margin: auto;
    text-align: center;
}

.version {
    margin: auto;
    text-align: center;
    font-size: 0.9em;
    right: 20px;
    top: 15px;
    padding: 0 10px;
    background-color: #60b52b;
    border-radius: 10px;
    position: absolute;
    color: white;
}

.link-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.link {
    display: flex;
    background: #f2f2f2;
    padding: .5em 1em;
    border-radius: 1em;
    margin: .2em .3em 0 .3em;
    align-items: center;
    cursor: pointer;
    color: black;
    text-decoration: none;
}

.link-icon {
    margin-right: .5em;
}

.label {
    margin: 0 0.5em;
    background-color: #60b52b;
    color: white;
    padding: .1em .3em;
    border-radius: .5em;
    font-size: .7em;
}

.nd-canvas {
    outline: none;
    background-color: #444;
    width: 100%;
    height: 100%;
}

.nd-noode, .nd-child-indicator {
    background-color: #cac7d2;
}

.nd-noode {
    border-radius: .7em;
    position: relative;
}

.nd-noode-active, .nd-child-indicator-active {
    background-color: white;
}

.nd-branch-inner {
    opacity: 0.8;
    transition-property: opacity;
    transition-duration: 0.5s;
    transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
}

.nd-branch-inner-focal {
    opacity: 1;
}

.landing-noode {
    text-align: center;
    padding: 2em;
    font-size: 18px;
}

.nd-noode > *:first-child {
    margin-top: .2em;
}

.nd-noode > *:last-child {
    margin-bottom: .2em;
}

.nd-limit {
    background-color: #333;
    transform: scale(2);
}

.nd-limit-enter, .nd-limit-leave-to {
    transform: scale(1);
}

.nd-limit-enter-active, .nd-limit-leave-active {
    transition-property: opacity, transform;
}

.copyright {
    text-align: center;
    color: #444444;
}

@media (max-width: 800px) {
    .nd-noode {
        max-width: 80vw;
    }

    .logo {
        height: 90px;
    }

    .title {
        font-size: 1.8em;
    }
}

@media (max-height: 800px) {
    .nd-noode {
        max-height: 80vh;
    }
}

@media (min-width: 801px) {
    .nd-noode {
        max-width: 500px;
    }

    .menu-item {
        max-width: 280px;
    }
}

@media (min-height: 801px) {
    .nd-noode {
        max-height: 700px;
    }
}

/** Extra UI elements **/

#noodeCount {
    position: absolute;
    z-index: 10000;
    top: 0;
    left: 50%;
    transform: translateX(-50%);
    width: 100px;
    border-bottom-left-radius: .4em;
    border-bottom-right-radius: .4em;
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    text-align: center;
    pointer-events: none;
    padding-bottom: .2em;
    font-size: small;
}

#searchButton {
    position: absolute;
    right: 1em;
    bottom: 1em;
    z-index: 10000;
    height: 2.5em;
    width: 2.5em;
    background-color: rgba(0, 0, 0, 0.5);
    border: none;
    border-radius: .5em;
    font-size: medium;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    cursor: pointer;
}

#langButton {
    position: absolute;
    right: 1em;
    bottom: 1em;
    z-index: 10000;
    height: 2.5em;
    width: 2.5em;
    background-color:transparent;
    border: none;
    border-radius: .5em;
    font-size: medium;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    cursor: pointer;
    top: 5px;
}

#searchButton:hover {
    background-color: rgba(0, 0, 0, 0.7);
}

#searchBar {
    position: absolute;
    bottom: 1em;
    right: 3.7em;
    background-color: rgba(0, 0, 0, 0.5);
    height: 2.5em;
    z-index: 10000;
    border-radius: .5em;
    padding-left: .5em;
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    align-items: center;
    max-width: 300px;
}

#searchInput {
    height: 1.5em;
    padding: 0 .3em;
    border-top-left-radius: .3em;
    border-bottom-left-radius: .3em;
    font-size: initial;
    border: none;
    max-width: 130px;
    background-color: white;
    font-family: inherit;
}

#searchIndicator {
    min-width: 35px;
    padding: 0 .3em;
    height: 1.5em;
    border-top-right-radius: .3em;
    border-bottom-right-radius: .3em;
    background-color: white;
    box-sizing: border-box;
}

#searchCount {
    font-size: small;
}

#searchPrev, #searchNext {
    font-size: initial;
    height: 100%;
    width: 2.5em;
    background-color: transparent;
    border: none;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0;
    cursor: pointer;
}

#searchIcon {
    height: 100%;
    width: 100%;
    cursor: pointer;
    background-color: transparent;
    border: none;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}

#searchIcon > img {
    height: 80%;
}

.searchFocus {
    background-color: #7e847e;
    color: #fff;
    padding: 5px;
    border-radius: 5px;
}

mark {

    background-color: #7e847e;
    color: #fff;
    padding: 5px;
    border-radius: 5px;


}

.hidden {
    display: none !important;
}

/*copy*/

.mailto-link {
	position: relative;
	padding: 8px 0;
}
.mailto-message {
	top: 1px;
	left: 50%;
	margin-bottom: -5px;
	transform: translate(-50%, -100%);
	position: absolute;
	display: none;
	width: auto;
	white-space: nowrap;
	font-size: 12px;
	background-color: black;
	color: white;
	padding: 2px 6px;
	border-radius: 2px;
	&:after,
	&:before {
		content: '';
	}
	&:before {
		top: 100%;
		left: 50%;
		border: solid transparent;
		height: 0;
		width: 0;
		position: absolute;
		pointer-events: none;
		border-color: rgba(0, 0, 0, 0);
		border-top-color: #000000;
		border-width: 4px;
		margin-left: -4px;
	}
}
.mailto-link:hover .mailto-message,
.mailto-link:focus .mailto-message,
.mailto-link:focus-within .mailto-message {
	display: block;
}

// styling below for fancy looks only
body {
	padding: 3em calc((100% - 75vw) / 2);
	line-height: 1.5;
	background-color: papayawhip;
	text-align: center;
}
.well {
	padding: 2em;
	background-color: rgba(black, .03);
	border-radius: 1em;
	box-shadow: inset 0 2px 4px rgba(black, .05);
}
h2 {
	font-weight: 400;
	margin-top: 0;
}
code {
	background-color: #e8f0e7;
	padding: 3px 6px;
}
input {
	padding: .6em 1.2em;
	border: 0;
	border-radius: 4px;
	font-size: 1.3em;
	text-align: center;
	&:focus {
		box-shadow: 0 0 3px 0 #b17b22;}
}

/*form*/

#fcf-form {
    display:block;
}

.fcf-body {
    margin: 0;
    font-family: -apple-system, Arial, sans-serif;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    text-align: left;
    background-color: #fff;
    padding: 10px;
    padding-bottom: 5px;
    border-radius: 5px;
    max-width: 100%;
}

.fcf-form-group {
    margin-bottom: 1rem;
}

.fcf-input-group {
    position: relative;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -ms-flex-align: stretch;
    align-items: stretch;
    width: 100%;
}

.fcf-form-control {
    text-align: left;
    display: block;
    width: 100%;
    height: calc(1.5em + 0.75rem + 2px);
    padding: 1px 2px 2px 5px;
    font-size: 14px;
    font-weight: 400;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    outline: none;
    border-radius: 0.25rem;
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

.fcf-form-control:focus {
    border: 1px solid #313131;
}

select.fcf-form-control[size], select.fcf-form-control[multiple] {
    height: auto;
}

textarea.fcf-form-control {
    font-family: -apple-system, Arial, sans-serif;
    height: auto;
}

label.fcf-label {
    display: inline-block;
    margin-bottom: 0.5rem;
}


.fcf-btn {
    display: inline-block;
    font-weight: 400;
    color: #212529;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: transparent;
    border: 1px solid transparent;
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0.25rem;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
}

@media (prefers-reduced-motion: reduce) {
    .fcf-btn {
        transition: none;
    }
}

.fcf-btn:hover {
    color: #212529;
    text-decoration: none;
}

.fcf-btn:focus, .fcf-btn.focus {
    outline: 0;
    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
}

.fcf-btn-primary {
    color: #fff;
    background-color: #000;
    border-color: #000;
}

.fcf-btn-primary:hover {
    color: #000;
    background-color: #fff;
    border-color: #000;
}

.fcf-btn-primary:focus, .fcf-btn-primary.focus {
    color: #fff;
    background-color: #0069d9;
    border-color: #0062cc;
    box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
}

.fcf-btn-lg, .fcf-btn-group-lg>.fcf-btn {
    padding: 0.5rem 1rem;
    font-size: 1.25rem;
    line-height: 1.5;
    border-radius: 0.3rem;
}

.fcf-btn-block {
    display: block;
    width: 100%;
}

.fcf-btn-block+.fcf-btn-block {
    margin-top: 0.5rem;
}

input[type="submit"].fcf-btn-block, input[type="reset"].fcf-btn-block, input[type="button"].fcf-btn-block {
    width: 100%;
}

